--- a/fontforge/CMakeLists.txt
+++ b/fontforge/CMakeLists.txt
@@ -268,12 +268,13 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
 else()
   target_link_libraries(fontforge PRIVATE gunicode gutils)
 endif()
+set_target_properties(fontforge PROPERTIES PUBLIC_HEADER "${FONTFORGE_NOINST_HEADERS};${FONTFORGE_INST_HEADERS}")
 
 # No dev package -> no need to install if static
 if(BUILD_SHARED_LIBS)
   if(WIN32)
     install(TARGETS fontforge RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
   else()
-    install(TARGETS fontforge RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+    install(TARGETS fontforge RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION /usr/local/include/fontforge )
   endif()
 endif()
